prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/inc_dec_not_assignable.nut
// EXPECT_ERROR: "not assignable"
(1 + 2)++
